# symo

./: .envrc  Cargo.toml  LICENSE  README.md  build.rs  config.toml  flake.nix  result
.github/workflows/: build.yml
modules/symo/: default.nix
src/: battery.rs  config.rs  date.rs  edition.rs  jails.rs  main.rs  monitor.rs  network.rs  resources.rs  volume.rs
src/resources/: battery.rs  cpu.rs  memory.rs
