[package]
name = "symo"
version = "0.1.0"
edition = "2021"
authors = ["Florian Büstgens <fb@fx-ttr.de>"]
description = "A simple DWM status bar for FreeBSD"
readme = "README.md"
license = "BSD-2-Clause"
categories = ["command-line-utilities"]
repository = "https://github.com/fxttr/symo"
keywords = ["x11", "dwm", "wm", "status"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
toml = "0.5.8"
chrono = "0.4.19"
interfaces = "0.0.8"
nix = "0.24.1"
kqueue = "1.0.6"
jail = "*"
x11 = "2.19.1"
libzetta = "0.3.1"
sysctl = "0.4.4"
xapian-rusty = "0.1.3"