[package]
name = "symo"
version = "0.1.2"
edition = "2021"
authors = ["Florian Marrero Liestmann <f.m.liestmann@fx-ttr.de>"]
description = "A simple DWM status bar"
readme = "README.md"
license = "BSD-2-Clause"
categories = ["command-line-utilities"]
repository = "https://github.com/fxttr/symo"
keywords = ["x11", "dwm", "wm", "status"]
build = "build.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
chrono = "0.4.31"
interfaces = "0.0.9"
nix = { version = "0.27.1", features = ["ioctl"] }
x11 = "2.21.0"
libzetta = "0.5.0"
sysctl = "0.5.5"
lxc = "0.7.0"
pipewire = "0.7.2"
battery = "0.7.8"